@@ -26,12 +26,12 @@ public class FormatHandlerUtil {
     public static FormatHandler find(String mimeType) {
         try {
             for (Class<? extends FormatHandler> formatHandlerClass : FORMAT_HANDLERS) {
-                FormatHandler formatHandler = formatHandlerClass.newInstance();
+                FormatHandler formatHandler = formatHandlerClass.getDeclaredConstructor().newInstance();
                 if (formatHandler.accept(mimeType)) {
                     return formatHandler;
                 }
             }
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (Exception e) {
             return null;
         }
 
